change whatsapp button to work with desktop BUG: if this could not work i have to do somthing diffrant

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <section class="wp-icon-section">
             <div class="wp-icon">
-                <a href="https://wa.me/919535255655&text?text=hi" target="_blank">
+                <a href="https://web.whatsapp.com/send?phone=919535255655&text=&app_absent=0" target="_blank">
                     <img src="img/wp-icon.svg" alt="whatsapp icon ">
                 </a>
             </div>
@@ -61,7 +61,7 @@
                             <ul class="nav navbar-nav menu_nav ml-auto">
                                 <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#about-us">About Us</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#contact-us">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -574,7 +574,7 @@
 
 
                                     <!-- contact us start section -->
-<section class="contact_area section_gap_bottom">
+<section class="contact_area section_gap_bottom" id="contact-us">
     <center> <h1> Contact Us </h1></center>
             <div class="container">
                 <div class="mapbox">
