--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <!-- Mobile Specific Meta -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Favicon-->
+        <!-- Favicon--> 
         <link rel="shortcut icon" href="img/fav.png">
         <!-- Author Meta -->
         <meta name="author" content="CodePixar">
@@ -36,7 +36,7 @@
 
         <section class="wp-icon-section">
             <div class="wp-icon">
-                <a href="https://web.whatsapp.com/send?phone=919535255655&text=&app_absent=0" target="_blank">
+                <a href="https://wa.me/919535255655" target="_blank">
                     <img src="img/wp-icon.svg" alt="whatsapp icon ">
                 </a>
             </div>
