changing banner size adding testimonials

--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@
                     <div class="collapse navbar-collapse offset">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="nav-item"> <a href="#"><i class="fa fa-twitter"></i></a> </li>
-                            <li class="nav-item"> <a href="#"><i class="fa fa-dribbble"></i></a> </li>
-                            <li class="nav-item"> <a href="#"><i class="fa fa-behance"></i></a> </li>
                         </ul>
                     </div>
                 </div>
@@ -89,7 +86,7 @@
                                 <div class="banner-content">
                                     <h1>Convenient 20L Water Cans</h1>
                                     <p>
-                                        Enjoy pure, hassle-free hydration with our 20-liter water cans for any occasion.
+                                        Crafting Durable and Custom Products with a Personal Touch!
                                     </p>
                                     <div class="add-bag d-flex align-items-center">
                                         <a class="add-btn" href="contact.html">Contact Us</a>
@@ -489,10 +486,8 @@
                                                 <img src=" img/product/review-1.png" alt="">
                 </div>
                 <div class="testimonial-text">
-                    <p>Lorem ipsum dolor sit amet consectetur. Quisque eu in aliquam sit ut nisl pellentesque proin
-                        amet. Pretium quis fermentum pretium massa erat consectetur nisl ut. Velit tellus vitae eleifend
-                        fringilla urna ultricies.</p>
-                    <h3>John Doe</h3>
+                    <p>Star Plast’s packaging solutions are robust and effective. The custom designs met our needs perfectly, and delivery was timely. Their service was professional and the packaging quality was excellent.</p>
+                    <h3>Rajesh M. | Bengaluru   </h3>
                 </div>
             </div>
             <div class="testimonials">
@@ -500,10 +495,8 @@
                                                 <img src=" img/product/review-1.png" alt="">
                 </div>
                 <div class="testimonial-text">
-                    <p>Lorem ipsum dolor sit amet consectetur. Quisque eu in aliquam sit ut nisl pellentesque proin
-                        amet. Pretium quis fermentum pretium massa erat consectetur nisl ut. Velit tellus vitae eleifend
-                        fringilla urna ultricies.</p>
-                    <h3>John Doe</h3>
+                    <p>Star Plast’s packaging solutions are sturdy and well-designed, reducing shipping damages significantly. The custom options were great, and delivery was fast. Highly impressed with their service and product quality.</p>
+                    <h3>Priya S. | Chennai</h3>
                 </div>
             </div>
             <div class="testimonials">
@@ -511,10 +504,8 @@
                                                 <img src=" img/product/review-1.png" alt="">
                 </div>
                 <div class="testimonial-text">
-                    <p>Lorem ipsum dolor sit amet consectetur. Quisque eu in aliquam sit ut nisl pellentesque proin
-                        amet. Pretium quis fermentum pretium massa erat consectetur nisl ut. Velit tellus vitae eleifend
-                        fringilla urna ultricies.</p>
-                    <h3>John Doe</h3>
+                    <p>I’m impressed with the plastic bottles from Star Plast. They are sturdy, clear, and have a great seal. Customer support was helpful, and the order arrived right on schedule.</p>
+                    <h3>Arjun K. | Bengaluru</h3>
                 </div>
             </div>
         </div>
