chaniging same banner to each file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="wp-icon-section">
         <div class="wp-icon">
             <a href="https://wa.me/919535255655" target="_blank">
-                <img src="img/wp-icon.svg" alt="whatsapp icon ">
+                <img src="img/whatsapp.svg" alt="whatsapp icon" class="wp-icon">
             </a>
         </div>
     </section>
