--- a/privercy.html
+++ b/privercy.html
@@ -89,52 +89,27 @@
         <!-- End Header Area -->
 
         <!-- start banner Area -->
-        <section class="banner-area">
-            <div class="container">
-                <div class="row fullscreen align-items-center justify-content-start">
-                    <div class="col-lg-12">
-                        <div class="active-banner-slider owl-carousel">
-                            <!-- single-slide -->
-                            <div class="row single-slide align-items-center d-flex">
-                                <div class="col-lg-5 col-md-6">
-                                    <div class="banner-content">
-                                        <h1>Hydrate with Our Water Jars</h1>
-                                        <p>Durable, Stylish, and Eco-Friendly Water Jars for Every Lifestyle – Quench Your Thirst Anytime, Anywhere </p>
-                                        <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href="contact.html">Contact Us</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7">
-                                    <div class="banner-img">
-                                        <img class="img-fluid" src="img/banner/banner-img.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- single-slide -->
-                            <div class="row single-slide">
-                                <div class="col-lg-5">
-                                    <div class="banner-content">
-                                        <h1>Convenient 20L Water Cans</h1>
-                                        <p>
-                                        Enjoy pure, hassle-free hydration with our 20-liter water cans for any occasion.
-                                        </p>
-                                        <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href="contact.html">Contact Us</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7">
-                                    <div class="banner-img">
-                                        <img class="img-fluid" src="img/banner/banner-img.png" alt="">
-                                    </div>
+        
+    <section class="banner-area" id="privercy-banner">
+        <div class="container">
+            <div class="row fullscreen align-items-center justify-content-start" style="height: 650px; !important">
+                <div class="col-lg-12">
+                    <div class="active-banner-slider owl-carousel">
+                        <div class="row single-slide">
+                            <div class="col-lg-5">
+                                <div class="banner-content">
+                                    <h1>Privacy Policy</h1>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+    <!-- End banner Area -->
+
+
         <!-- End banner Area -->
         <section class="privacy-section">
             <div class="privacy-div">
@@ -228,70 +203,71 @@
 
 
 
-        <!-- start footer Area -->
-        <footer class="footer-area section_gap">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3  col-md-6 col-sm-6">
-                        <div class="single-footer-widget">
-                            <h6>About Us</h6>
-                            <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-                            magna aliqua.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4  col-md-6 col-sm-6">
-                        <div class="single-footer-widget">
-                            <h6>Newsletter</h6>
-                            <p>Stay update with our latest</p>
-                            <div class="" id="mc_embed_signup">
+    <!-- start footer Area -->
+    <footer class="footer-area section_gap">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4  col-md-6 col-sm-6 footer-row">
+                    <div class="single-footer-widget">
+                        <h6>Newsletter</h6>
+                        <p>Stay update with our latest</p>
+                        <div class="" id="mc_embed_signup">
 
-                                <form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                    method="get" class="form-inline">
+                            <form target="_blank" novalidate="true"
+                                action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                                method="get" class="form-inline">
 
-                                    <div class="d-flex flex-row">
+                                <div class="d-flex flex-row">
 
-                                        <input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
+                                    <input class="form-control" name="EMAIL" placeholder="Enter Email"
+                                        onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
                                         required="" type="email">
 
 
-                                        <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-                                        <div style="position: absolute; left: -5000px;">
-                                            <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-                                        </div>
-
-                                        <!-- <div class="col-lg-4 col-md-4">
-                                            <button class="bb-btn btn"><span class="lnr lnr-arrow-right"></span></button>
-                                            </div>  -->
+                                    <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right"
+                                            aria-hidden="true"></i></button>
+                                    <div style="position: absolute; left: -5000px;">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+                                            type="text">
                                     </div>
-                                    <div class="info"></div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6 col-sm-6">
-                        <div class="single-footer-widget">
-                            <h6>Follow Us</h6>
-                            <p>Let us be social</p>
-                            <div class="footer-social d-flex align-items-center">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                                <a href="#"><i class="fa fa-behance"></i></a>
-                            </div>
+
+                                    <!-- <div class="col-lg-4 col-md-4">
+                                                                        <button class="bb-btn btn"><span class="lnr lnr-arrow-right"></span></button>
+                                                                        </div>  -->
+                                </div>
+                                <div class="info"></div>
+                            </form>
                         </div>
                     </div>
                 </div>
-                <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
-                    <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </p>
+                <div class="col-lg-2 col-md-6 col-sm-6 footer-row">
+                    <div class="single-footer-widget">
+                        <h6>Follow Us</h6>
+                        <p>Let us be social</p>
+                        <div class="footer-social d-flex align-items-center">
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="#"><i class="fa fa-behance"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 footer-row" >
+                    <div class="single-footer-widget">
+                        <h6>Useful Links</h6>
+                        <ul>
+                            <li><a href="privercy.html">Priversy Policy</a></li>
+                            <li><a href="terms-and-services.html">Terms and Condition</a></li>
+                        </ul>
+
+                    </div>
+
                 </div>
             </div>
-        </footer>
-        <!-- End footer Area -->
+        </div>
+    </footer>
+    <!-- End footer Area -->
+
 
         <script src="js/vendor/jquery-2.2.4.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
