--- a/terms-and-services.html
+++ b/terms-and-services.html
@@ -89,53 +89,26 @@
         <!-- End Header Area -->
 
         <!-- start banner Area -->
-        <section class="banner-area">
-            <div class="container">
-                <div class="row fullscreen align-items-center justify-content-start">
-                    <div class="col-lg-12">
-                        <div class="active-banner-slider owl-carousel">
-                            <!-- single-slide -->
-                            <div class="row single-slide align-items-center d-flex">
-                                <div class="col-lg-5 col-md-6">
-                                    <div class="banner-content">
-                                        <h1>Hydrate with Our Water Jars</h1>
-                                        <p>Durable, Stylish, and Eco-Friendly Water Jars for Every Lifestyle – Quench Your Thirst Anytime, Anywhere </p>
-                                        <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href="contact.html">Contact Us</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7">
-                                    <div class="banner-img">
-                                        <img class="img-fluid" src="img/banner/banner-img.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- single-slide -->
-                            <div class="row single-slide">
-                                <div class="col-lg-5">
-                                    <div class="banner-content">
-                                        <h1>Convenient 20L Water Cans</h1>
-                                        <p>
-                                        Enjoy pure, hassle-free hydration with our 20-liter water cans for any occasion.
-                                        </p>
-                                        <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href="contact.html">Contact Us</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7">
-                                    <div class="banner-img">
-                                        <img class="img-fluid" src="img/banner/banner-img.png" alt="">
-                                    </div>
+    <section class="banner-area" id="privercy-banner">
+        <div class="container">
+            <div class="row fullscreen align-items-center justify-content-start" style="height: 650px; !important">
+                <div class="col-lg-12">
+                    <div class="active-banner-slider owl-carousel">
+                        <div class="row single-slide">
+                            <div class="col-lg-5">
+                                <div class="banner-content">
+                                    <h1> Terms and Services </h1>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- End banner Area -->
+        </div>
+    </section>
+        <!-- start banner Area -->
+        
+
         <section class="privacy-section">
             <div class="privacy-div">
 
