--- a/index.html
+++ b/index.html
@@ -615,11 +615,8 @@
         </center>
         <div class="container">
             <div class="mapbox">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d485.921407594943!2d77.50008273659365!3d13.012013674113907!3m2!1i1024!2i768!4f13.1!2m1!1sstar%20plast!5e0!3m2!1sen!2sin!4v1718536951121!5m2!1sen!2sin"
-                    width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.3723890046813!2d77.49746192519713!3d13.011941713992272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3cf3dc15205b%3A0x2b23d62249a79806!2sSTAR%20PLAST!5e0!3m2!1sen!2sin!4v1731228346903!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.3723890046813!2d77.49746192519713!3d13.011941713992272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3d00114ab043%3A0xf429e864311328a5!2sSTAR%20PLAST%20(Unit%202)!5e0!3m2!1sen!2sin!4v1731228477132!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             <div class="row">
                 <div class="col-lg-3">
                     <div class="contact_info">
